gcc/testsuite/gcc.dg/lto/pr56168_1.c
@@ -1,0 +1,4 @@
+/* { dg-options "-fno-lto" } */
+
+double __attribute__((noinline,noclone))
+pow (double x, double y) { return 0.0; }
